feat: add LiveServiceDemo for on-demand monitoring with JFR and enhance HTML report with filtering and summary stats